chore: use docker/metadata-action's builtin version handling

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -133,12 +133,10 @@ jobs:
             type=raw,value=${{ github.sha }}
             type=sha,format=short,prefix=
             # If a new release was published, add semantic version tags
-            type=raw,value=${{ needs.release.outputs.new_release_version }},enable=${{ needs.release.outputs.new_release_published == 'true' }}
+            type=semver,pattern={{version}},value=${{ needs.release.outputs.new_release_version }},enable=${{ needs.release.outputs.new_release_published == 'true' }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ needs.release.outputs.new_release_version }},enable=${{ needs.release.outputs.new_release_published == 'true' }}
+            type=semver,pattern={{major}},value=${{ needs.release.outputs.new_release_version }},enable=${{ needs.release.outputs.new_release_published == 'true' && !startsWith(needs.release.outputs.new_release_version, 'v0.') }}
             type=raw,value=stable,enable=${{ needs.release.outputs.new_release_published == 'true' }}
-            # Extract major.minor from version (v1.2.3 -> v1.2)
-            type=raw,value=${{ needs.release.outputs.new_release_published == 'true' && format('v{0}.{1}', split(needs.release.outputs.new_release_version, '.')[0], split(needs.release.outputs.new_release_version, '.')[1]) }},enable=${{ needs.release.outputs.new_release_published == 'true' }}
-            # Extract major from version (v1.2.3 -> v1)
-            type=raw,value=${{ needs.release.outputs.new_release_published == 'true' && format('v{0}', split(needs.release.outputs.new_release_version, '.')[0]) }},enable=${{ needs.release.outputs.new_release_published == 'true' && !startsWith(needs.release.outputs.new_release_version, 'v0.') }}
 
       # Build and push Docker image with Buildx
       - name: Build and push Docker image
