chore: update version tagging

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,5 @@
 {
-  "branches": [
-    {"name": "main", "channel": "latest", "initial": "0.1.0"}
-  ],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
