--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,8 +36,7 @@ jobs:
       id-token: write
 
     outputs:
-      new_release_published: ${{ steps.semantic.outputs.new_release_published }}
-      new_release_version: ${{ steps.semantic.outputs.new_release_version }}
+      new_release_version: ${{ steps.semantic.outputs.version }}
 
     steps:
       - name: Checkout
@@ -63,8 +62,7 @@ jobs:
         run: npx semantic-release $DRY_RUN
       - name: Debug Semantic Release Output
         run: |
-          echo "New release published: ${{ steps.semantic.outputs.new_release_published }}"
-          echo "New release version: ${{ steps.semantic.outputs.new_release_version }}"
+          echo "New release version: ${{ steps.semantic.outputs.version }}"
 
   # Then build the Docker images with appropriate tags
   build:
