chore: disable successComment in .releaserc.json

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,7 +11,8 @@
             "path": "dist/*.tar.gz",
             "label": "Binary distribution"
           }
-        ]
+        ],
+        "successComment": false
       }
     ]
   ]
