--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,3 +49,14 @@ services:
     ports:
       - "80:80"
 
+  redis:
+    image: redis:7
+    container_name: heureka-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    restart: always
+
+volumes:
+  redis-data:
