--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,15 +49,15 @@ services:
     ports:
       - "80:80"
 
-  redis:
+  valkey:
     image: valkey/valkey:7.2
-    container_name: heureka-redis
+    container_name: heureka-valkey
     ports:
       - "6379:6379"
     command: ["valkey-server", "--appendonly", "yes"]
     volumes:
-      - redis-data:/data
+      - valkey-data:/data
     restart: always
 
 volumes:
-  redis-data:
+  valkey-data:
