feat: add db cache (#730)
* Add Cache concept

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Move to Cache struct

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Stage

* Stage 2

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Add statistics monitor

Fix initialization of CacheBase

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Add cache monitoring documentation

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Change redis to valkey

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Switch redis to valkey

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Review fixes

- interface method cacheKey -> CacheKey
- ttl global config change to param of CallCached
- config CACHE_TTL_MSEC change to CACHE_ENABLE
- move encodeKey, CacheKey, cacheKeyJson to
  CacheBase
- add doc comment for call_cached_check
- change in-memory cache implementation to go-cache
- change documentation related to CACHE_ENABLE
  instead of CACHE_TTL_MSEC
- adjust e2e_tests
- add db hit concurrent refresh limit using
  CACHE_MAX_DB_CONCURRENT_REFRESHES config variable
- add db hit concurrent refresh limit documentation
- add db refresh rate limit using
  CACHE_THROTTLE_INTERVAL_MSEC and
  CACHE_THROTTLE_PER_INTERVAL
- add db refresh rate limit documentation
- add e2e tests for rate base limit
- add e2e tests for concurrent limit

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

* Add fatal when Valkey is not available

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,3 +49,15 @@ services:
     ports:
       - "80:80"
 
+  valkey:
+    image: valkey/valkey:7.2
+    container_name: heureka-valkey
+    ports:
+      - "${VALKEY_PORT:-6379}:6379"
+    command: ["valkey-server", "--appendonly", "yes"]
+    volumes:
+      - valkey-data:/data
+    restart: always
+
+volumes:
+  valkey-data:
