Fix problem with cache
- Fix marshal/unmarshal problem of anonymous embed struct
IssueResult
- Remove redundant function getIssueMatchResults
- Add caching for GetIssueVariants
- Fix name of event for GetAllIssueMatchIds

On-behalf-of: SAP Michal Krzyz <michal.krzyz@sap.com>
Signed-off-by: Michal Krzyz <michalkrzyz@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,8 @@ services:
   valkey:
     image: valkey/valkey:7.2
     container_name: heureka-valkey
+    profiles:
+      - heureka
     ports:
       - "${VALKEY_PORT:-6379}:6379"
     command: ["valkey-server", "--appendonly", "yes"]
