--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,14 @@ updates:
       # Fridays, regardless of timezone. We _could_ run at a specific early
       # Friday time, but then everyone would run at the same time.
       day: "monday"
+    groups:
+      go-dependencies:
+        applies-to: version-updates
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
   # Dependabot for docker
   - package-ecosystem: docker
     directory: "/"
@@ -23,6 +31,13 @@ updates:
       # Fridays, regardless of timezone. We _could_ run at a specific early
       # Friday time, but then everyone would run at the same time.
       day: "monday"
+    groups:
+      docker-images:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
   # Dependabot for actions
   - package-ecosystem: github-actions
     directory: "/"
@@ -34,3 +49,10 @@ updates:
       # Fridays, regardless of timezone. We _could_ run at a specific early
       # Friday time, but then everyone would run at the same time.
       day: "monday"
+    groups:
+      github-actions:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
