feat(openfga): Add create user resource relationships, and testing

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ internal/mocks/*.go
 internal/api/graphql/graph/model/models_gen.go
 internal/api/graphql/graph/generated.go
 
+.vscode/launch.json
