--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,25 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Debug handler_test.go",
+            "type": "go",
+            "request": "launch",
+            "mode": "test",
+            "cwd": "${workspaceFolder}",
+            "program": "${workspaceFolder}/internal/app/component/component_handler_test.go",
+            "env": {},
+            "args": []
+        },
+            {
+      "name": "Debug All Tests (ginkgo -r)",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "program": "${workspaceFolder}",
+      "args": ["-ginkgo.v", "-ginkgo.r"], // -ginkgo.r for recursive, -ginkgo.v for verbose
+      "env": {}
+    },
+        {
             "name": "Launch K8sScanner",
             "type": "go",
             "request": "launch",
