feat(openfga): removed old placeholder and updated openfga env variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -124,7 +124,7 @@ services:
       - OPENFGA_DATASTORE_URI=postgres://postgres:password@postgres:5432/postgres?sslmode=disable
       - OPENFGA_LOG_FORMAT=json
       - OPENFGA_AUTHN_METHOD=preshared
-      - OPENFGA_AUTHN_PRESHARED_KEYS=${AUTH_TOKEN_SECRET}
+      - OPENFGA_AUTHN_PRESHARED_KEYS=${AUTHZ_FGA_API_TOKEN}
     command: run
     networks:
       - openfga
