feat(service): add domain and region fields to service table

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -246,6 +246,10 @@ models:
     fields:
       serviceCcrn:
         resolver: true
+      domain:
+        resolver: true
+      region:
+        resolver: true
       uniqueUserId:
         resolver: true
       userName:
