feat(openfga): add delete functionality to openfga tuples

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ internal/api/graphql/graph/model/models_gen.go
 internal/api/graphql/graph/generated.go
 
 .vscode/launch.json
+.vscode/launch.json
