refactor(serviceFilter): remove ccrn suffix

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -244,7 +244,7 @@ models:
         resolver: true
   ServiceFilterValue:
     fields:
-      serviceCcrn:
+      service:
         resolver: true
       domain:
         resolver: true
@@ -254,7 +254,7 @@ models:
         resolver: true
       userName:
         resolver: true
-      supportGroupCcrn:
+      supportGroup:
         resolver: true
       user:
         resolver: true
