--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   helm-release:
-    runs-on: [ default ]
+    runs-on: [ ubuntu-latest ]
     strategy:
       fail-fast: false
       matrix:
