fix(serviceFilter): revert #933

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -244,7 +244,7 @@ models:
         resolver: true
   ServiceFilterValue:
     fields:
-      service:
+      serviceCcrn:
         resolver: true
       domain:
         resolver: true
@@ -254,7 +254,7 @@ models:
         resolver: true
       userName:
         resolver: true
-      supportGroup:
+      supportGroupCcrn:
         resolver: true
       user:
         resolver: true
