--- a/.github/workflows/graphql-inspector.yml
+++ b/.github/workflows/graphql-inspector.yml
@@ -16,7 +16,8 @@ jobs:
         with:
           app-id: ${{ secrets.CLOUDOPERATOR_APP_ID }}
           private-key: ${{ secrets.CLOUDOPERATOR_APP_PRIVATE_KEY }}
-          permission-contents: write
+          permission-pull-requests: write
+          
       - name: Checkout base branch (main)
         uses: actions/checkout@v5
         with:
