--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug handler_test.go",
+            "name": "Debug component_handler_test.go",
             "type": "go",
             "request": "launch",
             "mode": "test",
             "cwd": "${workspaceFolder}",
             "program": "${workspaceFolder}/internal/app/component/component_handler_test.go",
-            "env": {},
+            "envFile": "${workspaceFolder}/.env",
             "args": []
         },
         {
