feat: add remediation queries

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -154,6 +154,8 @@ models:
         resolver: true
       issueMatches:
         resolver: true
+      remediations:
+        resolver: true
       issueCounts:
         resolver: true
   SupportGroup:
