feat(api): add image version

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -222,6 +222,14 @@ models:
         resolver: true
       vulnerabilities:
         resolver: true
+  ImageVersion:
+    fields:
+      occurences:
+        resolver: true
+      vulnerabilities:
+        resolver: true
+      vulnerabilityCounts:
+        resolver: true
   VulnerabilityFilterValue:
     fields:
       supportGroup:
